# rules_oapi_codegen

./: BUILD.bazel  MODULE.bazel  go.mod  oapi.bzl  tools.go
oapi-codegen/: BUILD.bazel
